--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDon</title>
+    <title>基于vue3.0 的todolist项目，使用了Vue3.0 Composition API</title>
   </head>
   <body>
     <div id="app"></div>
